files/node03/kubernetes/infobae/infobae-ingress.yaml
## Not used at the moment
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infobae-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: noticias.jonathan.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: infobae-api
                port:
                  number: 3000
